<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/all_cancel"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_post_title"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/all_share"
            android:textColor="@color/share_btn_color_normal"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@android:color/white"
        android:gravity="top|left"
        android:hint="@string/new_post_hint"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:textColor="@color/text_deep_color"
        android:textColorHint="@color/hint_textcolor"
        android:textSize="14sp"/>

    <com.lkl.ansuote.module.postwidget.addPhoto.view.postaddimage.view.PostAddImageView
        android:id="@+id/post_add_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:padding="10dp"/>

</LinearLayout>
