<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lkl.ansuote.module.postwidget.base.widget.HackyViewPager
        android:id="@+id/hack_view_pager"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <!--Title-->

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/btn_title_left"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/btn_btn_back"/>

        <TextView
            android:id="@+id/btn_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/btn_title_left"
            android:text="@string/all_preview"
            android:textColor="@color/text_deep_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_title_right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/all_done"
            android:textAppearance="@style/Theme.AppCompat"
            android:textColor="@color/text_deep_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <!--Bottom-->

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:clipChildren="true">

        <!--<CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:button="@drawable/btn_choose_photo_selector"
            android:scaleX="1.1"
            android:scaleY="1.1"/>-->

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:background="@drawable/btn_choose_photo_selector"
            android:button="@null"/>

        <TextView
            android:id="@+id/text_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/checkbox"
            android:text="@string/all_choose"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

</RelativeLayout>
