<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".choosephoto.view.ChoosePhotoActivity">

    <!--Title-->

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_title_left"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/btn_btn_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/btn_title_left"
            android:textColor="@color/text_deep_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_title_right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/btn_choose_photo_done"
            android:textColor="@color/text_deep_color"
            android:textSize="16sp"
            android:textAppearance="@style/Theme.AppCompat"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--Bottom-->

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:clipChildren="true">

        <TextView
            android:id="@+id/text_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/all_all"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/image_status"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/text_dir"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon_open"/>

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

</LinearLayout>
